name : fltkhs-altimeter
version : 0.0.0.1
synopsis : FLTKHS Mechanical Aircraft Altimeter
description:
    A port of http://seriss.com/people/erco/fltk/#Altimeter for demonstration purposes.
license : MIT
license-file : LICENSE
author : Aditya Siram
build-type: Custom
maintainer: aditya.siram@gmail.com
homepage: http://github.com/deech/fltkhs-altimeter
category: UI,Graphics
cabal-version: >=1.20
source-repository head
  type: git
  location: http://github.com/deech/fltkhs-altimeter

Flag FastCompile
   Description: Turn off optimizations for faster compilation
   Manual: True
   Default: False

Executable fltkhs-altimeter
  Main-Is: fltkhs-altimeter-demo.hs
  Hs-Source-Dirs: src/
  Build-Depends: base == 4.*,
                 fltkhs >= 0.4.0.9,
                 directory,
                 text >= 1.2.2.0
  default-language: Haskell2010
  ghc-Options: -debug -dcore-lint
  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  if os(darwin)
   ghc-Options: -pgml g++ "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
    ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
